--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -1023,7 +1023,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
               <div class="_lvhhqo">
                <a rel="noopener noreferrer" target="_blank" href="https://www.airbnb.com/resources/hosting-homes/a/how-to-define-what-kind-of-space-youre-hosting-361" class="_tx7p69r">
                 <div class="lite-image" style="--dls-liteimage-padding-top: 55.9633%;">
-                 <div class="_4626ulj">
+                 <div class="absolute-center">
                   <img
                    class="_91slf2a"
                    aria-hidden="true"
