--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -433,7 +433,7 @@
                                             class="h-full"
                                           >
                                             <div class="lite-image" style="--dls-liteimage-padding-top: 56%">
-                                              <div class="_4626ulj">
+                                              <div class="absolute-center">
                                                 <img
                                                   class="_91slf2a"
                                                   aria-hidden="true"
@@ -466,7 +466,7 @@
                                             class="h-full"
                                           >
                                             <div class="lite-image" style="--dls-liteimage-padding-top: 56%">
-                                              <div class="_4626ulj">
+                                              <div class="absolute-center">
                                                 <img
                                                   class="_91slf2a"
                                                   aria-hidden="true"
@@ -498,7 +498,7 @@
                                             class="h-full"
                                           >
                                             <div class="lite-image" style="--dls-liteimage-padding-top: 56%">
-                                              <div class="_4626ulj">
+                                              <div class="absolute-center">
                                                 <img
                                                   class="_91slf2a"
                                                   aria-hidden="true"
@@ -530,7 +530,7 @@
                                             class="h-full"
                                           >
                                             <div class="lite-image" style="--dls-liteimage-padding-top: 56%">
-                                              <div class="_4626ulj">
+                                              <div class="absolute-center">
                                                 <img
                                                   class="_91slf2a"
                                                   aria-hidden="true"
