--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -19701,7 +19701,7 @@
                                   <div class="_vzrbjl">Self check-in</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/self-check-in.png?im_w=240 1x"
@@ -19734,7 +19734,7 @@
                                   <div class="_vzrbjl">Free parking on premises</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/parking.png?im_w=240 1x"
@@ -19767,7 +19767,7 @@
                                   <div class="_vzrbjl">Pool</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/pool.png?im_w=240 1x"
@@ -19800,7 +19800,7 @@
                                   <div class="_vzrbjl">Full kitchen</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/kitchen.png?im_w=240 1x"
@@ -19833,7 +19833,7 @@
                                   <div class="_vzrbjl">Washer</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/washer.png?im_w=240 1x"
@@ -19866,7 +19866,7 @@
                                   <div class="_vzrbjl">Dryer</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/dryer.png?im_w=240 1x"
@@ -19899,7 +19899,7 @@
                                   <div class="_vzrbjl">Dishwasher</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/dishwasher.png?im_w=240 1x"
@@ -19932,7 +19932,7 @@
                                   <div class="_vzrbjl">Indoor fireplace</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/indoor-fireplace.png?im_w=240 1x"
@@ -19965,7 +19965,7 @@
                                   <div class="_vzrbjl">Room-darkening shades</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/darkening-shade.png?im_w=240 1x"
@@ -19998,7 +19998,7 @@
                                   <div class="_vzrbjl">Heating</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/heating.png?im_w=240 1x"
@@ -20031,7 +20031,7 @@
                                   <div class="_vzrbjl">Air conditioning</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/air-conditioning.png?im_w=240 1x"
@@ -20064,7 +20064,7 @@
                                   <div class="_vzrbjl">High chair</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/high-chair.png?im_w=240 1x"
@@ -20097,7 +20097,7 @@
                                   <div class="_vzrbjl">Bathtub</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/bathtub.png?im_w=240 1x"
@@ -20130,7 +20130,7 @@
                                   <div class="_vzrbjl">Backyard</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/garden-backyard.png?im_w=240 1x"
@@ -20163,7 +20163,7 @@
                                   <div class="_vzrbjl">Crib</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/crib.png?im_w=240 1x"
@@ -20196,7 +20196,7 @@
                                   <div class="_vzrbjl">Children’s books and toys</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/childrens-books-toys.png?im_w=240 1x"
@@ -20229,7 +20229,7 @@
                                   <div class="_vzrbjl">Pool toys</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/pool-toys.png?im_w=240 1x"
@@ -20268,7 +20268,7 @@
                                   <div class="_vzrbjl">Wifi</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/wireless-internet.png?im_w=240 1x"
@@ -20301,7 +20301,7 @@
                                   <div class="_vzrbjl">TV</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/tv.png?im_w=240 1x"
@@ -20336,7 +20336,7 @@
                                   </div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/essentials.png?im_w=240 1x"
@@ -20371,7 +20371,7 @@
                                   </div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/extra-pillows-blankets.png?im_w=240 1x"
@@ -20404,7 +20404,7 @@
                                   <div class="_vzrbjl">Coffee maker</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/coffee-maker.png?im_w=240 1x"
@@ -20437,7 +20437,7 @@
                                   <div class="_vzrbjl">Hair dryer</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/hair-dryer.png?im_w=240 1x"
@@ -20470,7 +20470,7 @@
                                   <div class="_vzrbjl">Iron</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/iron.png?im_w=240 1x"
@@ -20506,7 +20506,7 @@
                                   </div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/co2-detector.png?im_w=240 1x"
@@ -20542,7 +20542,7 @@
                                   </div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/smoke-detector.png?im_w=240 1x"
@@ -20575,7 +20575,7 @@
                                   <div class="_vzrbjl">Fire extinguisher</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
                                     <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
-                                      <div class="_4626ulj">
+                                      <div class="absolute-center">
                                         <picture>
                                           <source
                                             srcset="https://a0.muscache.com/airbnb/static/select/pdp/amenities/list-view-2x/fire-extinguisher.png?im_w=240 1x"
