--- a/submission/photo-upload.html
+++ b/submission/photo-upload.html
@@ -1052,7 +1052,7 @@
                                  <div class="_b328lf" role="img" tabindex="0" aria-label="Photo collage  with a variety of details and angles">
                                   <div class="_13ucou1">
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
-                                    <div class="_4626ulj">
+                                    <div class="absolute-center">
                                      <img
                                       class="_91slf2a"
                                       aria-hidden="true"
@@ -1067,7 +1067,7 @@
                                     </div>
                                    </div>
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
-                                    <div class="_4626ulj">
+                                    <div class="absolute-center">
                                      <img
                                       class="_91slf2a"
                                       aria-hidden="true"
@@ -1082,7 +1082,7 @@
                                     </div>
                                    </div>
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
-                                    <div class="_4626ulj">
+                                    <div class="absolute-center">
                                      <img
                                       class="_91slf2a"
                                       aria-hidden="true"
@@ -1097,7 +1097,7 @@
                                     </div>
                                    </div>
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
-                                    <div class="_4626ulj">
+                                    <div class="absolute-center">
                                      <img
                                       class="_91slf2a"
                                       aria-hidden="true"
@@ -1124,7 +1124,7 @@
                                  <div class="_b328lf" role="img" tabindex="0" aria-label="Photo collage with  the same subjects and angles">
                                   <div class="_13ucou1">
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
-                                    <div class="_4626ulj">
+                                    <div class="absolute-center">
                                      <img
                                       class="_91slf2a"
                                       aria-hidden="true"
@@ -1139,7 +1139,7 @@
                                     </div>
                                    </div>
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
-                                    <div class="_4626ulj">
+                                    <div class="absolute-center">
                                      <img
                                       class="_91slf2a"
                                       aria-hidden="true"
@@ -1154,7 +1154,7 @@
                                     </div>
                                    </div>
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
-                                    <div class="_4626ulj">
+                                    <div class="absolute-center">
                                      <img
                                       class="_91slf2a"
                                       aria-hidden="true"
@@ -1169,7 +1169,7 @@
                                     </div>
                                    </div>
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
-                                    <div class="_4626ulj">
+                                    <div class="absolute-center">
                                      <img
                                       class="_91slf2a"
                                       aria-hidden="true"
@@ -1199,7 +1199,7 @@
                                  <div class="_1dnt01i">
                                   <div class="_b328lf" role="img" tabindex="0" aria-label="Photo of a candid moment">
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo of a candid moment" style="border-radius: 12px; --dls-liteimage-padding-top: 133.333%;">
-                                    <div class="_4626ulj">
+                                    <div class="absolute-center">
                                      <img
                                       class="_91slf2a"
                                       aria-hidden="true"
@@ -1224,7 +1224,7 @@
                                   </div>
                                   <div class="_b328lf" role="img" tabindex="0" aria-label="Photo of a pose that is not candid">
                                    <div class="lite-image" role="img" aria-busy="false" aria-label="Photo of a pose that is not candid" style="border-radius: 12px; --dls-liteimage-padding-top: 133.333%;">
-                                    <div class="_4626ulj">
+                                    <div class="absolute-center">
                                      <img
                                       class="_91slf2a"
                                       aria-hidden="true"
